option cc_enable_arenas = true;
option cc_generic_services = true;
option csharp_namespace = "foo";
option go_package = "foo";
option java_generic_services = true;
option java_multiple_files = true;
option java_outer_classname = "foo";
option java_package = "foo";
option java_string_check_utf8 = true;
option objc_class_prefix = "foo";
option optimize_for = CODE_SIZE;
option php_class_prefix = "foo";
//option php_generic_services = true;
option php_metadata_namespace = "foo";
option php_namespace = "foo";
option py_generic_services = true;
option ruby_package = "foo";
option swift_prefix = "foo";
